Fixed text overflow

--- a/src/components/Bookmark/Bookmark.module.scss
+++ b/src/components/Bookmark/Bookmark.module.scss
@@ -11,6 +11,8 @@
 
   display: flex;
   flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   > :global(.usa-link) {
     flex-grow: 1;
